--- a/fake_real.ipynb
+++ b/fake_real.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,14 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import PassiveAggressiveClassifier\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import SGDClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +110,7 @@
        "4  It's primary day in New York and front-runners...  REAL  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +137,7 @@
        "Name: label, dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +524,7 @@
        "[61651 rows x 1 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,69 +540,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['REAL' 'FAKE' 'REAL' ..., 'REAL' 'FAKE' 'REAL']\n"
+      "['REAL' 'FAKE' 'REAL' ..., 'REAL' 'FAKE' 'REAL']\n",
+      "Accuracy: 92.74%\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[588,  50],\n",
+       "       [ 42, 587]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "pac=PassiveAggressiveClassifier(max_iter=50)\n",
     "pac.fit(tfidf_train,y_train)\n",
     "y_pred=pac.predict(tfidf_test)\n",
-    "print(y_pred)"
+    "print(y_pred)\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "print(f'Accuracy: {round(score*100,2)}%')\n",
+    "confusion_matrix(y_test,y_pred, labels=['FAKE','REAL'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 92.66%\n"
+      "['REAL' 'FAKE' 'REAL' ..., 'REAL' 'FAKE' 'REAL']\n",
+      "Accuracy: 91.71%\n"
      ]
-    }
-   ],
-   "source": [
-    "score=accuracy_score(y_test,y_pred)\n",
-    "print(f'Accuracy: {round(score*100,2)}%')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "array([[586,  52],\n",
-       "       [ 41, 588]])"
+       "array([[600,  38],\n",
+       "       [ 67, 562]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "pac=LogisticRegression(max_iter=50)\n",
+    "pac.fit(tfidf_train,y_train)\n",
+    "y_pred=pac.predict(tfidf_test)\n",
+    "print(y_pred)\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "print(f'Accuracy: {round(score*100,2)}%')\n",
     "confusion_matrix(y_test,y_pred, labels=['FAKE','REAL'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['REAL' 'FAKE' 'REAL' ..., 'REAL' 'FAKE' 'REAL']\n",
+      "Accuracy: 92.74%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[597,  41],\n",
+       "       [ 51, 578]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pac=SGDClassifier(max_iter=50)\n",
+    "pac.fit(tfidf_train,y_train)\n",
+    "y_pred=pac.predict(tfidf_test)\n",
+    "print(y_pred)\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "print(f'Accuracy: {round(score*100,2)}%')\n",
+    "confusion_matrix(y_test,y_pred, labels=['FAKE','REAL'])"
+   ]
   }
  ],
  "metadata": {
